developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registration_Detail__c/OJSERLIB__VEDA_PPSR_Registration_Detail__c.object-meta.xml
<CustomObject>
    <label>VEDA PPSR Registration Detail</label>
    <nameField>
        <displayFormat>RD-{0000}</displayFormat>
        <label>PPSR Registration Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA PPSR Registration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>