developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registration_Detail__c/fields/OJSERLIB__Collateral_Class__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Collateral_Class__c</fullName>
    <label>Collateral Class</label>
    <length>100</length>
    <type>Text</type>
</CustomField>