developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registration_Detail__c/fields/OJSERLIB__Migrated_Flag__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Migrated_Flag__c</fullName>
    <label>Migrated Flag</label>
    <length>25</length>
    <type>Text</type>
</CustomField>