developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registration_Detail__c/fields/OJSERLIB__Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Registration_End_Date__c</fullName>
    <label>Registration End Date</label>
    <type>DateTime</type>
</CustomField>