developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registration_Detail__c/fields/OJSERLIB__Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Registration_Number__c</fullName>
    <label>Registration Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>