developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registration_Detail__c/fields/OJSERLIB__Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Registration_Start_Date__c</fullName>
    <label>Registration Start Date</label>
    <type>DateTime</type>
</CustomField>