developerProject/force-app/main/default/objects/OJSERLIB__VEDA_PPSR_Registration_Detail__c/fields/OJSERLIB__SPG_s__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__SPG_s__c</fullName>
    <label>SPG&apos;s</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>